@@ -1002,15 +1002,17 @@ class CService extends CZBXAPI {
 		// the query will return the alarms with the maximum timestamp for each service
 		// since multiple alarms can have the same timestamp, we only need to save the last one
 		$query = DBSelect(
-			'SELECT sa.serviceid,sa.value
-				FROM service_alarms sa
-					LEFT OUTER JOIN service_alarms sa2 ON (sa.serviceid=sa2.serviceid AND sa.clock<sa2.clock AND sa2.clock<'.zbx_dbstr($beforeTime).')
-				WHERE sa2.servicealarmid IS NULL
-					AND sa.clock<'.zbx_dbstr($beforeTime).'
-					AND '.dbConditionInt('sa.serviceid', $serviceIds).'
-				ORDER BY sa.servicealarmid'
+			'SELECT sa.serviceid,sa.value'.
+			' FROM (SELECT MAX(sa3.servicealarmid) AS servicealarmid'.
+					' FROM (SELECT sa2.serviceid,MAX(sa2.clock) AS clock'.
+							' FROM service_alarms sa2'.
+							' WHERE sa2.clock<'.zbx_dbstr($beforeTime).
+								' AND '.dbConditionInt('sa2.serviceid', $serviceIds).
+							' GROUP BY sa2.serviceid) AS ss'.
+					' JOIN service_alarms sa3 ON sa3.serviceid = ss.serviceid and sa3.clock = ss.clock'.
+					' GROUP BY sa3.serviceid) AS ss2'.
+			' JOIN service_alarms sa ON sa.servicealarmid = ss2.servicealarmid'
 		);
-
 		$rs = array();
 		while ($alarm = DBfetch($query)) {
 			$rs[$alarm['serviceid']] = $alarm['value'];
